# Bank-customer-churn-prediction

./: Dockerfile  EDA- Bank Customer Churn Prediction.ipynb  README.md  dvc.yaml  dvc.yaml.bak  main.py  pyproject.toml  requirements.txt  setup.py  supervisord.conf  wait-for-fastapi.sh
.github/workflows/: cicd.yaml
StreamFast/: app.py  gen_ai_explainer.py  main.py  model_loader.py  rag.py  retention.py
artifacts/: .gitignore  best_model.pkl  eval_metrics.json  experiment_info.json  selected_features.pkl
bank_churn_pred.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/csv/: custdetails.csv  customers.csv
data/prepared/: test_prepared.csv  train_prepared.csv
mlruns/0/: meta.yaml
src/: exception.py  logger.py
src/components/: data_ingestion.py  data_preparation.py  data_transformation.py  model_evaluation.py  model_training.py  register_model.py
