[project]
name = "bank-churn-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.28",
    "catboost>=1.2.8",
    "chromadb>=1.1.1",
    "dill>=0.4.0",
    "dvc>=3.63.0",
    "imbalanced-learn==0.14.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=0.6.7",
    "lightgbm>=4.0",
    "matplotlib>=3.10.6",
    "mlflow>=3.3.2",
    "numba>=0.61",
    "numpy==2.2.4",
    "pandas>=2.1",
    "pydantic>=2.11.7",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "scikit-learn>=1.3",
    "seaborn>=0.13.2",
    "selenium>=4.36.0",
    "sentence-transformers>=5.1.1",
    "shap>=0.44",
    "streamlit>=1.49.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.35.0",
    "webdriver-manager>=4.0.2",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = [
    "bank-churn-pred",
    "catboost>=1.2.8",
    "dvc>=3.63.0",
    "imbalanced-learn==0.14.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "lightgbm>=4.0",
    "matplotlib>=3.10.6",
    "numba>=0.61",
    "numpy==2.2.4",
    "pandas>=2.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.3",
    "seaborn>=0.13.2",
    "shap>=0.44",
]

[tool.uv.sources]
bank-churn-pred = { workspace = true }
